revert stock prefix

--- a/meltano.yml
+++ b/meltano.yml
@@ -37,21 +37,21 @@ plugins:
       - ticker_details.*
       - ticker_types.*
       - related_companies.*
-      - stock_bars_1_second.*
-      - stock_bars_30_second.*
-      - stock_bars_1_minute.*
-      - stock_bars_5_minute.*
-      - stock_bars_30_minute.*
-      - stock_bars_1_hour.*
-      - stock_bars_1_day.*
-      - stock_bars_1_week.*
-      - stock_bars_1_month.*
+      - bars_1_second.*
+      - bars_30_second.*
+      - bars_1_minute.*
+      - bars_5_minute.*
+      - bars_30_minute.*
+      - bars_1_hour.*
+      - bars_1_day.*
+      - bars_1_week.*
+      - bars_1_month.*
       - daily_market_summary.*
       - daily_ticker_summary.*
       - previous_day_bar.*
       - top_market_movers.*
-      - stock_trades.*
-      - stock_quotes.*
+      - trades.*
+      - quotes.*
       - sma.*
       - ema.*
       - macd.*
@@ -93,7 +93,7 @@ plugins:
         other_params:
           loop_over_dates_gte_date: true
 
-      stock_bars_1_second:
+      bars_1_second:
         path_params:
           multiplier: 1
           timespan: "second"
@@ -104,7 +104,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_30_second:
+      bars_30_second:
         path_params:
           multiplier: 30
           timespan: "second"
@@ -115,7 +115,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_1_minute:
+      bars_1_minute:
         path_params:
           multiplier: 1
           timespan: "minute"
@@ -126,7 +126,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_5_minute:
+      bars_5_minute:
         path_params:
           multiplier: 5
           timespan: "minute"
@@ -137,7 +137,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_30_minute:
+      bars_30_minute:
         path_params:
           multiplier: 30
           timespan: "minute"
@@ -148,7 +148,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_1_hour:
+      bars_1_hour:
         path_params:
           multiplier: 1
           timespan: "hour"
@@ -159,7 +159,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_1_day:
+      bars_1_day:
         path_params:
           multiplier: 1
           timespan: "day"
@@ -170,7 +170,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_1_week:
+      bars_1_week:
         path_params:
           multiplier: 1
           timespan: "week"
@@ -181,7 +181,7 @@ plugins:
           sort: "asc"
           limit: 5000
 
-      stock_bars_1_month:
+      bars_1_month:
         path_params:
           multiplier: 1
           timespan: "month"
@@ -211,14 +211,14 @@ plugins:
         query_params:
           direction: "gainers"  # set to "" or "both" to get both directions
           include_otc: false
-      stock_trades:
+      trades:
         query_params:
           sort: timestamp
           order: "asc"
           timestamp__gte: "2025-05-20T22:59:00Z"
           timestamp__lte: "2025-05-20T23:59:00Z"
           limit: 50000
-      stock_quotes:
+      quotes:
         query_params:
           timestamp__gte: "2025-05-20T23:59:00Z"
           timestamp__lte: "2025-05-21T00:59:00Z"
