--- a/meltano.yml
+++ b/meltano.yml
@@ -103,6 +103,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_30_second:
         path_params:
@@ -114,6 +116,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_1_minute:
         path_params:
@@ -125,6 +129,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_5_minute:
         path_params:
@@ -136,6 +142,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_30_minute:
         path_params:
@@ -147,6 +155,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_1_hour:
         path_params:
@@ -158,6 +168,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_1_day:
         path_params:
@@ -169,6 +181,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_1_week:
         path_params:
@@ -180,6 +194,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       bars_1_month:
         path_params:
@@ -191,6 +207,8 @@ plugins:
           adjusted: true
           sort: "asc"
           limit: 5000
+        other_params:
+          use_cached_tickers: true
 
       daily_market_summary:
         path_params:
@@ -200,6 +218,7 @@ plugins:
           include_otc: true
         other_params:
           loop_over_dates_gte_date: true
+
       daily_ticker_summary:
         path_params:
           date: "2025-05-20"
@@ -207,10 +226,13 @@ plugins:
           adjusted: true
         other_params:
           loop_over_dates_gte_date: true
+          use_cached_tickers: true
+
       top_market_movers:
         query_params:
           direction: "gainers"  # set to "" or "both" to get both directions
           include_otc: false
+
       trades:
         query_params:
           sort: timestamp
@@ -218,12 +240,18 @@ plugins:
           timestamp__gte: "2025-05-20T22:59:00Z"
           timestamp__lte: "2025-05-20T23:59:00Z"
           limit: 50000
+        other_params:
+          use_cached_tickers: true
+
       quotes:
         query_params:
           timestamp__gte: "2025-05-20T23:59:00Z"
           timestamp__lte: "2025-05-21T00:59:00Z"
           sort: timestamp
           order: asc
+        other_params:
+          use_cached_tickers: true
+
       sma:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
@@ -233,6 +261,9 @@ plugins:
           window: 10
           series_type: close
           expand_underlying: true
+        other_params:
+          use_cached_tickers: true
+
       ema:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
@@ -242,6 +273,9 @@ plugins:
           window: 10
           series_type: close
           expand_underlying: true
+        other_params:
+          use_cached_tickers: true
+
       macd:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
@@ -253,30 +287,38 @@ plugins:
           signal_window: 9
           series_type: close
           expand_underlying: true
+        other_params:
+          use_cached_tickers: true
+
       rsi:
         query_params:
-          timestamp__gte: "2015-06-01"
+          timestamp__gte: "2025-01-01T00:00:00.999Z"
+          timestamp__lte: "2025-01-30T01:00:00.999Z"
           order: "asc"
           timespan: "minute"
           window: 18
           series_type: close
           expand_underlying: true
           limit: 5000
+
       ipos:
         query_params:
           listing_date__gte: "2018-12-10"
           listing_date__lte: "2025-05-30"
+
       splits:
         query_params:
           execution_date__gte: "2023-08-21"
           limit: 1000
           order: asc
+
       dividends:
         query_params:
           ex_dividend_date__gte: "2025-01-01"
           ex_dividend_date__lte: "2025-01-30"
           order: asc
           limit: 1000
+
       financials:
         query_params:
           filing_date__gte: "2025-01-01"
@@ -284,22 +326,31 @@ plugins:
           order: asc
           include_sources: true
           limit: 100
+
       short_interest:
         query_params:
-          settlement_date__gte: "2025-01-01"
-          settlement_date__lt: "2025-01-30"
+          settlement_date__gte: "2020-01-01"
           limit: 10000
+        other_params:
+          use_cached_tickers: true
+
       short_volume:
         query_params:
           date__gte: "2025-05-20"
-          date__lte: "2025-05-30"
+          date__lte: "2025-06-10"
           order: asc
           limit: 10000
+        other_params:
+          use_cached_tickers: true
+
       news:
         query_params:
           published_utc__gte: "2025-05-21"
           published_utc__lte: "2025-05-23"
           order: asc
+        other_params:
+          use_cached_tickers: true
+
       treasury_yields:
         query_params:
           date__gte: "2025-05-01"
