Centralize base classes and clean up options streams

--- a/meltano.yml
+++ b/meltano.yml
@@ -34,28 +34,28 @@ plugins:
 
     select:
       - stock_tickers.*
-      - ticker_details.*
-      - ticker_types.*
+      - stock_ticker_details.*
+      - stock_ticker_types.*
       - related_companies.*
-      - bars_1_second.*
-      - bars_30_second.*
-      - bars_1_minute.*
-      - bars_5_minute.*
-      - bars_30_minute.*
-      - bars_1_hour.*
-      - bars_1_day.*
-      - bars_1_week.*
-      - bars_1_month.*
-      - daily_market_summary.*
-      - daily_ticker_summary.*
-      - previous_day_bar.*
-      - top_market_movers.*
-      - trades.*
-      - quotes.*
-      - sma.*
-      - ema.*
-      - macd.*
-      - rsi.*
+#      - stock_bars_1_second.*
+#      - stock_bars_30_second.*
+#      - stock_bars_1_minute.*
+#      - stock_bars_5_minute.*
+#      - stock_bars_30_minute.*
+#      - stock_bars_1_hour.*
+      - stock_bars_1_day.*
+#      - stock_bars_1_week.*
+#      - stock_bars_1_month.*
+      - stock_daily_market_summary.*
+      - stock_daily_ticker_summary.*
+      - stock_previous_day_bar.*
+      - stock_top_market_movers.*
+      - stock_trades.*
+      - stock_quotes.*
+      - stock_sma.*
+      - stock_ema.*
+      - stock_macd.*
+      - stock_rsi.*
       - exchanges.*
       - market_holidays.*
       - market_status.*
@@ -72,6 +72,28 @@ plugins:
       - inflation.*
       - inflation_expectations.*
       - options_contracts.*
+      - options_contract_overview.*
+#      - options_bars_1_second.*
+#      - options_bars_30_second.*
+#      - options_bars_1_minute.*
+#      - options_bars_5_minute.*
+#      - options_bars_30_minute.*
+#      - options_bars_1_hour.*
+#      - options_bars_1_day.*
+#      - options_bars_1_week.*
+#      - options_bars_1_month.*
+      - options_daily_ticker_summary.*
+      - options_previous_day_bar.*
+#      - options_trades.*
+#      - options_quotes.*
+#      - options_last_trade.*
+      - options_contract_snapshot.*
+      - options_chain_snapshot.*
+      - options_unified_snapshot.*
+      - options_sma.*
+      - options_ema.*
+      - options_macd.*
+      - options_rsi.*
 
     config:
       # set this for a global start date for all streams -- will be overridden by the streams incremental state if that's more recent.
@@ -80,7 +102,7 @@ plugins:
       # To set start_date earlier than this start date for a specific stream, either comment this start_date block out
       # or set it earlier than the streams start timestamp. The reason for this is because of incremental builds -- it
       # takes the max between this global config and the streams timestamp config param to get the starting timestamp.
-      start_date: '2000-01-01T00:00:00Z'
+      start_date: '2025-01-20T00:00:00Z'
 
       api_key: ${POLYGON_API_KEY}
       base_url: https://api.polygon.io
@@ -103,7 +125,7 @@ plugins:
           - "AAPL"
           - "META"
 
-      bars_1_second:
+      stock_bars_1_second:
         path_params:
           multiplier: 1
           timespan: "second"
@@ -116,7 +138,7 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_30_second:
+      stock_bars_30_second:
         path_params:
           multiplier: 30
           timespan: "second"
@@ -129,7 +151,7 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_1_minute:
+      stock_bars_1_minute:
         path_params:
           multiplier: 1
           timespan: "minute"
@@ -142,7 +164,7 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_5_minute:
+      stock_bars_5_minute:
         path_params:
           multiplier: 5
           timespan: "minute"
@@ -155,7 +177,7 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_30_minute:
+      stock_bars_30_minute:
         path_params:
           multiplier: 30
           timespan: "minute"
@@ -168,7 +190,7 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_1_hour:
+      stock_bars_1_hour:
         path_params:
           multiplier: 1
           timespan: "hour"
@@ -181,20 +203,20 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_1_day:
+      stock_bars_1_day:
         path_params:
           multiplier: 1
           timespan: "day"
-          from: "2025-01-06"
-          to: "2025-01-07"
+          from: "2025-01-20"
+          to: "2025-01-21"
         query_params:
           adjusted: true
           sort: "asc"
-          limit: 5000
+          limit: 50000
         other_params:
           use_cached_tickers: true
 
-      bars_1_week:
+      stock_bars_1_week:
         path_params:
           multiplier: 1
           timespan: "week"
@@ -207,7 +229,7 @@ plugins:
         other_params:
           use_cached_tickers: true
 
-      bars_1_month:
+      stock_bars_1_month:
         path_params:
           multiplier: 1
           timespan: "month"
@@ -222,74 +244,80 @@ plugins:
 
       daily_market_summary:
         path_params:
-          date: "2025-08-18"  # leave blank or set to "" to get current day
+          date: "2025-01-20"
         query_params:
           adjusted: true
           include_otc: true
+          limit: 50000
         other_params:
-          loop_over_dates_gte_date: true
+          loop_over_dates_gte_date: false
 
       daily_ticker_summary:
         path_params:
-          date: "2025-08-18"
+          date: "2025-01-20"
         query_params:
           adjusted: true
+          limit: 50000
         other_params:
-          loop_over_dates_gte_date: true
+          loop_over_dates_gte_date: false
           use_cached_tickers: true
 
       top_market_movers:
         query_params:
           direction: "gainers"  # set to "" or "both" to get both directions
           include_otc: false
+          limit: 50000
 
       trades:
         query_params:
           sort: timestamp
           order: "asc"
-          timestamp__gte: "2025-08-17T22:59:00Z"
-          timestamp__lte: "2025-08-19T23:59:00Z"
+          timestamp__gte: "2025-01-20T22:59:00Z"
+          timestamp__lte: "2025-01-20T23:59:00Z"
           limit: 50000
         other_params:
           use_cached_tickers: true
 
       quotes:
         query_params:
-          timestamp__gte: "2025-05-18T23:59:00Z"
-          timestamp__lte: "2025-08-19T00:59:00Z"
+          timestamp__gte: "2025-01-20T23:59:00Z"
+          timestamp__lte: "2025-01-21T00:59:00Z"
           sort: timestamp
           order: asc
+          limit: 50000
         other_params:
           use_cached_tickers: true
 
-      sma:
+      stock_sma:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
-          timestamp__lte: "2025-01-19T01:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
           order: asc
           timespan: day
           window: 10
           series_type: close
           expand_underlying: true
+          limit: 5000
         other_params:
           use_cached_tickers: true
 
-      ema:
+      stock_ema:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
-          timestamp__lte: "2025-01-19T01:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
           order: asc
           timespan: day
           window: 10
           series_type: close
           expand_underlying: true
+          limit: 5000
         other_params:
           use_cached_tickers: true
 
-      macd:
+      stock_macd:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
-          timestamp__lte: "2025-01-19T01:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
           order: asc
           timespan: day
           short_window: 12
@@ -297,13 +325,14 @@ plugins:
           signal_window: 9
           series_type: close
           expand_underlying: true
+          limit: 5000
         other_params:
           use_cached_tickers: true
 
-      rsi:
+      stock_rsi:
         query_params:
           timestamp__gte: "2025-01-01T00:00:00.999Z"
-          timestamp__lte: "2025-01-19T01:00:00.999Z"
+          timestamp__lte: "2025-01-30T01:00:00.999Z"
           order: "asc"
           timespan: day
           window: 18
@@ -379,9 +408,198 @@ plugins:
           date__lte: "2025-06-30"
           limit: 5000
 
-      options_contract_details:
+      options_contract_overview:
+        other_params:
+          use_cached_tickers: true
+
+      options_bars_1_second:
         path_params:
-          options_ticker: "O:AAPL251219C00150000"
+          multiplier: 1
+          timespan: "second"
+          from: "2025-01-06"
+          to: "2025-01-07"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_30_second:
+        path_params:
+          multiplier: 30
+          timespan: "second"
+          from: "2025-01-06"
+          to: "2025-01-07"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_1_minute:
+        path_params:
+          multiplier: 1
+          timespan: "minute"
+          from: "2025-01-06"
+          to: "2025-01-07"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_5_minute:
+        path_params:
+          multiplier: 5
+          timespan: "minute"
+          from: "2025-01-06"
+          to: "2025-01-07"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_30_minute:
+        path_params:
+          multiplier: 30
+          timespan: "minute"
+          from: "2025-01-06"
+          to: "2025-01-07"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_1_hour:
+        path_params:
+          multiplier: 1
+          timespan: "hour"
+          from: "2025-01-06"
+          to: "2025-01-07"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_1_day:
+        path_params:
+          multiplier: 1
+          timespan: "day"
+          from: "2025-01-06"
+          to: "2025-01-08"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_1_week:
+        path_params:
+          multiplier: 1
+          timespan: "week"
+          from: "2025-01-06"
+          to: "2025-05-09"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_bars_1_month:
+        path_params:
+          multiplier: 1
+          timespan: "month"
+          from: "2023-01-06"
+          to: "2025-06-09"
+        query_params:
+          adjusted: true
+          sort: "asc"
+          limit: 5000
+
+      options_daily_ticker_summary:
+        path_params:
+          date: "2025-08-18"
+        query_params:
+          adjusted: true
+        other_params:
+          loop_over_dates_gte_date: true
+          use_cached_tickers: true
+
+      options_previous_day_bar:
+        query_params:
+          adjusted: false
+        other_params:
+          use_cached_tickers: true
+
+      options_trades:
+        query_params:
+          sort: timestamp
+          order: "asc"
+          timestamp__gte: "2025-08-17T22:59:00Z"
+          timestamp__lte: "2025-08-18T23:59:00Z"
+          limit: 50000
+
+      options_quotes:
+        query_params:
+          timestamp__gte: "2025-05-18T23:59:00Z"
+          timestamp__lte: "2025-08-19T00:59:00Z"
+          sort: timestamp
+          order: asc
+
+      options_last_trade:
+        other_params:
+          use_cached_tickers: true
+
+      options_contract_snapshot:
+        other_params:
+          use_cached_tickers: true
+
+      options_chain_snapshot:
+        path_params:
+          underlyingAsset: "AAPL"
+        query_params:
+          limit: 250
+
+      options_sma:
+        query_params:
+          timestamp__gte: "2025-01-20T00:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
+          order: asc
+          timespan: day
+          window: 10
+          series_type: close
+          expand_underlying: true
+          limit: 5000
+
+      options_ema:
+        query_params:
+          timestamp__gte: "2025-01-20T00:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
+          order: asc
+          timespan: day
+          window: 10
+          series_type: close
+          expand_underlying: true
+          limit: 5000
+
+      options_macd:
+        query_params:
+          timestamp__gte: "2025-01-20T00:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
+          order: asc
+          timespan: day
+          short_window: 12
+          long_window: 26
+          signal_window: 9
+          series_type: close
+          expand_underlying: true
+          limit: 5000
+
+      options_rsi:
+        query_params:
+          timestamp__gte: "2025-01-20T00:00:00.999Z"
+          timestamp__lte: "2025-01-22T01:00:00.999Z"
+          order: "asc"
+          timespan: day
+          window: 18
+          series_type: close
+          expand_underlying: true
+          limit: 5000
 
   loaders:
   - name: target-jsonl
